hphp/hack/test/typecheck/contravariance_bad1.php.exp
File "contravariance_bad1.php", line 31, characters 10-11:
Some type constraint(s) here are violated (Typing[4110])
File "contravariance_bad1.php", line 16, characters 17-17:
'T' is a constrained type
File "contravariance_bad1.php", line 16, characters 22-22:
This is an object of type A
File "contravariance_bad1.php", line 29, characters 30-30:
It is incompatible with an object of type B
